<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_shot_analyze"
        android:title="@string/shot_menu_analyze"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shot_edit"
        android:title="@string/shot_menu_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shot_copy"
        android:title="@string/shot_menu_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shot_share"
        android:title="@string/shot_menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shot_delete"
        android:title="@string/shot_menu_delete"
        app:showAsAction="never" />
</menu>
